--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,12 @@
     <div class="container">
         <div class="title">
             <h3>Realtime Chat Room</h3>
+            
         </div>
         <div class="card">
             <div class="card-header">Anonymous</div>
+            <h3>Time :</h3>
+            <div class="date-cur"></div>
             <div class="card-body">
                 <div class="input-group">
                     <input type="text" class="form-control" id="username" placeholder="Change your username">
