--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,49 +14,18 @@
         </div>
         <div class="card-chat-room">
             <div class="card-chat" >
-                <ol>
-                    <li>
-                        a
-                    </li>
-                    <li>
-                        a
-                    </li>
-                    <li>
-                        a
-                    </li>
-                    <li>
-                        a
-                    </li>
-                    <li>
-                        a
-                    </li>
-                    <li>
-                        a
-                    </li>
-                    <li>
-                        a
-                    </li>
-                    <li>
-                        a
-                    </li>
-                    <li>
-                        a
-                    </li>
-                    <li>
-                        a
-                    </li>
-                    <li>
-                        a
-                    </li>
+                <ol id="message-list">
                     <li>
                         a
                     </li>
                 </ol>
             </div>
             <div class="card-input" >
-                <input style="width: 100%;"/><button>SEND</button>
+                <input style="width: 100%;" id="message" /><button id="messageBtn">SEND</button>
             </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" ></script>
+    <script src="/js/chatroomtest.js"></script>
 </body>
 </html>
